8241139: Shenandoah: distribute mark-compact work exactly to minimize fragmentation

Reviewed-by: rkennke