src/hotspot/share/gc/shenandoah/shenandoahMarkCompact.hpp
@@ -71,6 +71,7 @@ private:
   void phase3_update_references();
   void phase4_compact_objects(ShenandoahHeapRegionSet** worker_slices);
 
+  void distribute_slices(ShenandoahHeapRegionSet** worker_slices);
   void calculate_target_humongous_objects();
   void compact_humongous_objects();
 };
